alignment issues improved

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
   --light-blue: #489c79;
   --blue: #00ff;
   --red: #ff00;
+  --grey1: #ccc;
+  --green: #04aa6d;
+  --white: #fff;
 }
 
 * {
@@ -76,17 +79,21 @@ button:focus
   border-radius: 50%;
 }
 
+#indexh1 {
+  text-align: left;
+}
+
+.profile {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
 .page-footer { /* clear floating, center and space the footer */
   clear: both;
   display: flex;
   flex-direction: column;
   padding: 5px;
   text-align: center;
-}
-
-.profile {
-  max-width: 700px;
-  margin: 0 auto;
 }
 
 .page-header { /* header in same line and with enought space around */
@@ -125,7 +132,7 @@ button:focus
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin: 0;
+    margin: 5px;
   }
 
   .grid__item {
@@ -193,10 +200,56 @@ button:focus
   }
 }
 
+#universityillustration {
+  margin: 0 auto;
+  display: block;
+}
+
 .sun {
   animation-duration: 5s;
   animation-name: color-change;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
+}
+
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--grey1);
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: var(--green);
+  color: var(--white);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: var(--green);
+}
+
+.container {
+  border-radius: 5px;
+  background-color: var(--grey);
+  padding: 20px;
+}
+
+#contactbutton {
+  width: 20%;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
 }
