--- a/css/style.production.css
+++ b/css/style.production.css
@@ -2,7 +2,7 @@
 * Prefixed by https://autoprefixer.github.io
 * PostCSS: v8.4.14,
 * Autoprefixer: v10.4.7
-* Browsers: last 2 version
+* Browsers: last 4 version
 */
 
 * {
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color:  	#f8f8f8;
+  background-color: #f8f8f8;
   font-family: "Montserrat", sans-serif;
   font-size: 15px;
   font-weight: 400;
@@ -24,11 +24,11 @@ h1 {  /* set a bigger h1 relative to the rest of the text and center */
 }
 
 a { /* normal link */
-  color: #000000;
+  color: #000;
 }
 
 a:visited { /* visited link */
-  color:  #3c3c3c;
+  color: #3c3c3c;
 }
 
 a:hover,
@@ -40,19 +40,17 @@ a:active { /* selected link */
   color: #489c79;
 }
 
-button
-.button {
+button.button {
   /* overwrites browser defaults and resets the border */
   border: none;
-  /* takes the font from the outer container, body */
-  font-family: inherit;
-  background-color: #000000;
-  color: #ffffff;
+  font-family: inherit; /* takes the font from the outer container, body */
+  background-color: #000;
+  color: #fff;
   padding: 10px;
   border-radius: 5px;
-  /* gives the button a bottom border with a width of 1px, a type of solid, and a color in RGBA format */
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);  /* gives the button a bottom border with a width of 1px, a type of solid, and a color in RGBA format */
   -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
   transition: 0.2s opacity;
 }
 
@@ -62,8 +60,7 @@ button:focus
 .button:focus {
   /* on hover or focus turn the mouse to a hand pointer */
   cursor: pointer;
-  /* reduces the opacity of the button to 80% */
-  opacity: 0.8;
+  opacity: 0.8; /* reduces the opacity of the button to 80% */
 }
 
 .navigation-list__item--active {
@@ -78,7 +75,16 @@ button:focus
   border-radius: 50%;
 }
 
-.page-footer { /* clear floating, center and space the footer*/
+#indexh1 {
+  text-align: left;
+}
+
+.profile {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.page-footer { /* clear floating, center and space the footer */
   clear: both;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -89,11 +95,6 @@ button:focus
           flex-direction: column;
   padding: 5px;
   text-align: center;
-}
-
-.profile {
-  max-width: 700px;
-  margin: 0 auto;
 }
 
 .page-header { /* header in same line and with enought space around */
@@ -131,8 +132,8 @@ button:focus
   display: inline-block;
   width: 33%;
 }
-/* end grid fallback, next if suported will override */
 
+/* end grid fallback, next if suported will override */
 @supports (display: grid) {
   .grid {
     display: -ms-grid;
@@ -140,15 +141,16 @@ button:focus
     -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin: 0;
-
+    margin: 5px;
   }
+
   .grid__item {
-    background-color: #D8D8D8;
+    background-color: #d8d8d8;
     width: auto;
     min-height: auto;
     margin: 0;
   }
+
   .grid__item:last-child {
     -ms-grid-column: 3;
     grid-column: 3 / 3;
@@ -168,20 +170,24 @@ button:focus
     grid-template-columns: 1fr;
   }
 }
-@media all and (min-width: 500px) and (max-width: 750px){
+
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
@@ -205,20 +211,27 @@ button:focus
 
 @-webkit-keyframes color-change {
   0% {
-    fill: #ff0000;
+    fill: #ff00;
   }
+
   100% {
-    fill: #0000ff;
+    fill: #00ff;
   }
 }
 
 @keyframes color-change {
   0% {
-    fill: #ff0000;
+    fill: #ff00;
   }
+
   100% {
-    fill: #0000ff;
+    fill: #00ff;
   }
+}
+
+#universityillustration {
+  margin: 0 auto;
+  display: block;
 }
 
 .sun {
@@ -232,4 +245,68 @@ button:focus
           animation-direction: alternate;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+select {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04aa6d;
+  color: #fff;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #04aa6d;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #d8d8d8;
+  padding: 20px;
+}
+
+#contactbutton {
+  width: 20%;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
 }
